<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accent_color_pref_key_temp">accent_color_pref_key_temp</string>
    <string name="accent_color_pref_summary">Fab button, details</string>
    <string name="accent_color_pref_title">Highlight Color</string>
    <string name="action_menu_back_from_search">stop searching</string>
    <string name="background_color_pref_key_temp">background_color_pref_key_temp</string>
    <string name="background_color_pref_summary">Background color on all screens</string>
    <string name="background_color_pref_title">Background</string>
    <string name="banner_part_1">You are using Zoiper Free.</string>
    <string name="banner_part_2">Upgrade to</string>
    <string name="banner_part_3"> COMBO </string>
    <string name="banner_part_4">now!</string>
    <string name="button_cancel">Cancel</string>
    <string name="config_label_calls">Calls</string>
    <string name="config_label_diagnostic">Diagnostic</string>
    <string name="contact_us_label">Contact us</string>
    <string name="description_clear_search">Clear search</string>
    <string name="enable_recording">Record all calls</string>
    <string name="import_color_pref_summary">Import colors from the current theme</string>
    <string name="import_colors_pref_key">import_colors_pref_key</string>
    <string name="import_colors_pref_title">Import Colors</string>
    <string name="new_updates_available_for_all">"- Added default account for native dialer integration
 - Speaker gain
 - Video
 - Widget
 - Encryption (TLS) + SRTP
 - Added Polish translation
 - Added KeepAlive option to SIP accounts
 - Added option to send messages from the Call log
 - Call-waiting available for non Gold users
 - Fixes &amp; reliability improvements
"</string>
    <string name="new_updates_available_for_all_title">Available for all:</string>
    <string name="new_updates_zoiper_gold">"- Conferencing
 - Presence
 - Call Transfer
 - Wideband audio (opus and more)
 - Encryption (ZRTP)
"</string>
    <string name="new_updates_zoiper_gold_button">Get ZoiPer Gold</string>
    <string name="new_updates_zoiper_gold_title">ZoiPer Gold users:</string>
    <string name="pref_answer_after_hint">1-120 seconds</string>
    <string name="pref_category_key_automation">pref_category_key_automation</string>
    <string name="pref_category_title_call_automation">Automation</string>
    <string name="pref_key_answer_after">answer_after</string>
    <string name="pref_key_auto_answer_incoming_calls">auto_answer_incoming_calls</string>
    <string name="pref_key_bluetooth">bluetooth</string>
    <string name="pref_key_call_waiting">pref_key_call_waiting</string>
    <string name="pref_key_clear_frequently_stats">clear_frequently_stats</string>
    <string name="pref_key_clear_pinned_contacts">clear_pinned_contacts</string>
    <string name="pref_key_contacts_display_order">contacts_display_order</string>
    <string name="pref_key_contacts_sort_order">contacts_sort_order</string>
    <string name="pref_key_contacts_sources">contacts_sources</string>
    <string name="pref_key_delete_debug_log">delete_debug_log</string>
    <string name="pref_key_enable_audio_thread_stats">pref_key_enable_audio_thread_stats</string>
    <string name="pref_key_enable_crash_sound">enable_crash_sound</string>
    <string name="pref_key_enable_debug_log">debug_log</string>
    <string name="pref_key_enable_logcat_logger">pref_key_enable_logcat_logger</string>
    <string name="pref_key_enable_push_indication">pref_key_enable_push_indication</string>
    <string name="pref_key_enable_push_sound">pref_key_enable_push_sound</string>
    <string name="pref_key_instant_auto_answer">instant_auto_answer</string>
    <string name="pref_key_java_crash">pref_key_java_crash</string>
    <string name="pref_key_java_driver_audio_record_source">pref_key_java_driver_audio_record_source</string>
    <string name="pref_key_keep_settings_after_restart">keep_settings_after_restart</string>
    <string name="pref_key_latency_check">latency_check</string>
    <string name="pref_key_limit_debug_log_file_length">pref_key_limit_debug_log_file_length</string>
    <string name="pref_key_native_crash">pref_key_native_crash</string>
    <string name="pref_key_record_all_calls">call_recording</string>
    <string name="pref_key_record_calls_in_mp3">pref_key_record_calls_in_mp3</string>
    <string name="pref_key_request_bluetooth_permission">pref_key_request_bluetooth_permission</string>
    <string name="pref_key_send_logcat">send_logcat</string>
    <string name="pref_key_sent_debug_log">sent_debug_log</string>
    <string name="pref_key_set_audio_mode">pref_key_set_audio_mode</string>
    <string name="pref_key_set_audio_source_preset">pref_key_set_audio_source_preset</string>
    <string name="pref_key_set_sampling_rate">pref_key_set_sampling_rate</string>
    <string name="pref_key_show_diagnostics">pref_key_show_diagnostics</string>
    <string name="pref_key_simulate_anr">pref_key_simulate_anr</string>
    <string name="pref_key_start_verbose_logging">start_verbose_logging</string>
    <string name="pref_key_use_full_blueparrot_functionality">use_full_blueparrot_functionality</string>
    <string name="pref_label_answer_after">Answer After</string>
    <string name="pref_label_clear_frequently_stats">Clear Frequently Called</string>
    <string name="pref_label_clear_pinned_contacts">Clear Pinned Contacts</string>
    <string name="pref_label_contacts_display_order">Name Format</string>
    <string name="pref_label_contacts_sort_order">Sort Order</string>
    <string name="pref_label_contacts_sources">Contacts sources</string>
    <string name="pref_label_debub_log">Debug Log</string>
    <string name="pref_label_delete_debug_log">Delete Debug Log File</string>
    <string name="pref_label_enable_audio_thread_stats">Enable Audio High Thread Stats</string>
    <string name="pref_label_enable_crash_sound">Enable crash sound</string>
    <string name="pref_label_enable_debub_log">Enable Debug Log</string>
    <string name="pref_label_enable_logcat_logger">Enable logcat logger</string>
    <string name="pref_label_enable_push_indication">Enable push indication</string>
    <string name="pref_label_enable_push_sound">Enable push sound</string>
    <string name="pref_label_instant_auto_answer">Instant Auto Answer</string>
    <string name="pref_label_java_crash">Java crash</string>
    <string name="pref_label_java_driver_audio_record_source">Java driver AudioRecord source</string>
    <string name="pref_label_keep_settings_after_restart">Keep Settings After Restart</string>
    <string name="pref_label_latency_check">Audio Latency Test</string>
    <string name="pref_label_limit_debub_log_file_length">Limit file length</string>
    <string name="pref_label_native_crash">Native crash</string>
    <string name="pref_label_request_bluetooth_permission">Allow bluetooth permission</string>
    <string name="pref_label_send_logcat">Send logcat</string>
    <string name="pref_label_sent_debug_log">Send Debug Log</string>
    <string name="pref_label_set_audio_mode">Set audio mode</string>
    <string name="pref_label_set_audio_source">Set audio source</string>
    <string name="pref_label_set_sampling_rate">Set sampling rate</string>
    <string name="pref_label_show_diagnostics_section">Show diagnostics section</string>
    <string name="pref_label_simulate_anr">Simulate ANR</string>
    <string name="pref_label_simulate_crash">Simulate crash</string>
    <string name="pref_label_start_verbose_logging">Start verbose logging</string>
    <string name="pref_label_summary_bluetooth_permission">On Android 12 using Bluetooth requires permission to be given. Tap to trigger Android System Permission request dialog to Enable.</string>
    <string name="pref_label_use_full_blueparrot_functionality">Use full BlueParrot device functionality</string>
    <string name="pref_summary_call_waiting">Enable to allow incoming calls while in an active call.</string>
    <string name="pref_title_auto_answer">Auto Answer</string>
    <string name="pref_title_bluetooth">Bluetooth</string>
    <string name="pref_title_call_recordings">Call recording</string>
    <string name="pref_title_call_waiting">Call waiting</string>
    <string name="pref_title_contacts">Contacts</string>
    <string name="pref_title_record_calls_in_mp3">Record all calls in MP3</string>
    <string name="premium_features_notice">Your Previous purchases should sync automatically when using the same email account that was used for the purchase(s). If your purchase(s) do not appear, please visit our FAQ <a href="https://www.zoiper.com/en/support/home/article/11/Synching_in-app_purchases"><b>here</b></a>, or contact us at <a href="mailto:android@zoiper.com">android@zoiper.com</a></string>
    <string name="preview_button_pref_key">preview_button_pref_key</string>
    <string name="preview_button_pref_title">Show Preview</string>
    <string name="preview_color_pref_summary">Show preview of the selected colors</string>
    <string name="primary_color_pref_key_temp">primary_color_pref_key_temp</string>
    <string name="primary_color_pref_summary">Navigation bar</string>
    <string name="primary_color_pref_title">Foreground</string>
    <string name="revers_background_color_pref_key_temp">revers_background_color_pref_key_temp</string>
    <string name="revers_background_color_pref_summary">Text color over background color</string>
    <string name="revers_background_color_pref_title">Background Text Color</string>
    <string name="reverse_primary_light_color_pref_key_temp">reverse_primary_light_color_pref_key_temp</string>
    <string name="reverse_primary_light_color_pref_summary">Text color over foreground color</string>
    <string name="reverse_primary_light_color_pref_title">Foreground Text Color</string>
    <string name="search_font_family">sans-serif</string>
    <string name="send_email_label">Send email</string>
    <string name="use_full_blueparrot_functionality_pref_summary">Full BlueParrott functionality uses Bluetooth Low Energy (BLE) which requires Location permission to be given.</string>
    <string name="whats_new_title">"What's new"</string>
</resources>