<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.zoiper.android.util.themeframework.customviews.CustomColorPreference android:title="@string/primary_color_pref_title" android:key="@string/primary_color_pref_key_temp" android:summary="@string/primary_color_pref_summary" app:colorpicker_showAlpha="false" />
    <com.zoiper.android.util.themeframework.customviews.CustomColorPreference android:title="@string/background_color_pref_title" android:key="@string/background_color_pref_key_temp" android:summary="@string/background_color_pref_summary" app:colorpicker_showAlpha="false" />
    <com.zoiper.android.util.themeframework.customviews.CustomColorPreference android:title="@string/accent_color_pref_title" android:key="@string/accent_color_pref_key_temp" android:summary="@string/accent_color_pref_summary" app:colorpicker_showAlpha="false" />
    <com.zoiper.android.util.themeframework.customviews.CustomColorPreference android:title="@string/revers_background_color_pref_title" android:key="@string/revers_background_color_pref_key_temp" android:summary="@string/revers_background_color_pref_summary" app:colorpicker_showAlpha="false" />
    <com.zoiper.android.util.themeframework.customviews.CustomColorPreference android:title="@string/reverse_primary_light_color_pref_title" android:key="@string/reverse_primary_light_color_pref_key_temp" android:summary="@string/reverse_primary_light_color_pref_summary" app:colorpicker_showAlpha="false" />
    <com.zoiper.android.preferences.api.PreferenceWrapper android:title="@string/import_colors_pref_title" android:key="@string/import_colors_pref_key" android:summary="@string/import_color_pref_summary" />
    <com.zoiper.android.preferences.api.PreferenceWrapper android:title="@string/preview_button_pref_title" android:key="@string/preview_button_pref_key" android:summary="@string/preview_color_pref_summary" />
</PreferenceScreen>
