<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/pref_title_contacts"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.zoiper.android.preferences.api.ListPreferenceWrapper android:entries="@array/pref_select_contacts_sort_order" android:title="@string/pref_label_contacts_sort_order" android:key="@string/pref_key_contacts_sort_order" android:defaultValue="1" android:entryValues="@array/pref_select_contacts_sort_order_values" />
    <com.zoiper.android.preferences.api.ListPreferenceWrapper android:entries="@array/pref_select_contacts_display_order" android:title="@string/pref_label_contacts_display_order" android:key="@string/pref_key_contacts_display_order" android:defaultValue="1" android:entryValues="@array/pref_select_contacts_sort_display_values" />
    <com.zoiper.android.preferences.view.ContactsSourcesPreference android:title="@string/pref_label_contacts_sources" android:key="@string/pref_key_contacts_sources" />
    <com.zoiper.android.preferences.view.ClearFrequentlyCalledPreference android:title="@string/pref_label_clear_frequently_stats" android:key="@string/pref_key_clear_frequently_stats" />
    <com.zoiper.android.preferences.view.ClearPinnedContactsPreference android:title="@string/pref_label_clear_pinned_contacts" android:key="@string/pref_key_clear_pinned_contacts" />
</PreferenceScreen>
