<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper android:id="@id/viewFlipper" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/banner_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/banner_text_size" android:textColor="@color/banner_text_first" android:gravity="center" android:background="@color/banner_background_first" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/banner_part_1" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textSize="@dimen/banner_text_size" android:textColor="@color/banner_text_second" android:gravity="right|center" android:background="@color/banner_background_second" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/banner_part_2" android:layout_weight="5.0" />
        <TextView android:textSize="@dimen/banner_text_size" android:textStyle="bold" android:textColor="@color/banner_text_second" android:gravity="center" android:background="@color/banner_background_second" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/banner_part_3" />
        <TextView android:textSize="@dimen/banner_text_size" android:textColor="@color/banner_text_second" android:gravity="left|center" android:background="@color/banner_background_second" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/banner_part_4" android:layout_weight="3.0" />
    </LinearLayout>
</ViewFlipper>
