<?xml version="1.0" encoding="utf-8"?>
<com.zoiper.android.util.themeframework.customviews.CustomLinearLayout android:orientation="vertical" android:background="@color/primary_background" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.zoiper.android.util.themeframework.customviews.CustomLinearLayout android:gravity="center_vertical" android:orientation="vertical" android:padding="@dimen/whats_new_layout_padding" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.zoiper.android.util.themeframework.customviews.CustomTextView android:layout_gravity="center_horizontal" android:paddingBottom="@dimen/whats_new_title_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/whats_new_title" style="@style/WhatsNewTitle" />
            <View android:layout_marginLeft="@dimen/preference_dialog_divider_margin_left" android:layout_marginRight="@dimen/preference_dialog_divider_margin_right" style="@style/PreferenceDivider" />
            <com.zoiper.android.util.themeframework.customviews.CustomTextView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/whats_new_subtitle_margin" android:text="@string/new_updates_zoiper_gold_title" style="@style/WhatsNewSubTitle" />
            <com.zoiper.android.util.themeframework.customviews.CustomTextView android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_updates_zoiper_gold" style="@style/WhatsNewText" />
            <com.zoiper.android.util.themeframework.customviews.CustomTextView android:layout_gravity="center_horizontal" android:id="@id/get_zoiper_gold_button" android:background="@drawable/whats_new_button_get_zoiper_gold_border" android:paddingLeft="@dimen/whats_new_get_zoiper_gold_padding_left" android:paddingTop="@dimen/whats_new_get_zoiper_gold_padding_top" android:paddingRight="@dimen/whats_new_get_zoiper_gold_padding_right" android:paddingBottom="@dimen/whats_new_get_zoiper_gold_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/whats_new_button_margin" android:text="@string/new_updates_zoiper_gold_button" style="@style/WhatsNewGetZoiperGold" />
            <com.zoiper.android.util.themeframework.customviews.CustomTextView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/whats_new_subtitle_margin" android:text="@string/new_updates_available_for_all_title" style="@style/WhatsNewSubTitle" />
            <com.zoiper.android.util.themeframework.customviews.CustomTextView android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_updates_available_for_all" style="@style/WhatsNewText" />
            <View android:layout_marginLeft="@dimen/preference_dialog_divider_margin_left" android:layout_marginRight="@dimen/preference_dialog_divider_margin_right" style="@style/PreferenceDivider" />
            <com.zoiper.android.util.themeframework.customviews.CustomTextView android:layout_gravity="center_horizontal" android:id="@id/whats_new_button_cancel" android:background="@drawable/background_with_pressed_state" android:paddingLeft="@dimen/whats_new_cancel_padding_left" android:paddingTop="@dimen/whats_new_cancel_padding_top" android:paddingRight="@dimen/whats_new_cancel_padding_right" android:paddingBottom="@dimen/whats_new_cancel_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/whats_new_button_margin" android:text="@string/button_cancel" style="@style/WhatsNewButtonCancel" />
        </com.zoiper.android.util.themeframework.customviews.CustomLinearLayout>
    </ScrollView>
</com.zoiper.android.util.themeframework.customviews.CustomLinearLayout>
