<?xml version="1.0" encoding="utf-8"?>
<com.zoiper.android.util.themeframework.customviews.CustomLinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/search_box_expanded" android:background="@drawable/toolbar_round_background" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.zoiper.android.util.themeframework.customviews.CustomImageButton android:id="@id/search_back_button" android:background="@null" android:paddingLeft="@dimen/search_box_button_back_padding_left" android:paddingRight="@dimen/search_box_button_back_padding_right" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@drawable/ic_back_arrow" android:contentDescription="@string/action_menu_back_from_search" android:paddingStart="@dimen/search_box_button_back_padding_left" android:paddingEnd="@dimen/search_box_button_back_padding_right" app:tint="@color/toolbar_background_color" />
    <com.zoiper.android.widget.BackAwareEditText android:textSize="@dimen/search_text_size" android:textColor="@color/searchbox_text_color" android:textColorHint="@color/searchbox_hint_text_color" android:id="@id/search_view_id" android:background="@null" android:layout_width="0.0dp" android:layout_height="match_parent" android:singleLine="true" android:layout_weight="1.0" android:inputType="textFilter" android:imeOptions="flagNoExtractUi" android:textCursorDrawable="@drawable/custom_cursor" android:fontFamily="@string/search_font_family" />
    <com.zoiper.android.util.themeframework.customviews.CustomImageView android:id="@id/search_close_button" android:background="@null" android:paddingRight="@dimen/search_box_button_close_padding_right" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@drawable/ic_close_dk" android:contentDescription="@string/description_clear_search" android:paddingEnd="@dimen/search_box_button_close_padding_right" app:tint="@color/searchbox_icon_tint" />
</com.zoiper.android.util.themeframework.customviews.CustomLinearLayout>
