<?xml version="1.0" encoding="utf-8"?>
<com.zoiper.android.util.themeframework.customviews.CustomConstraintLayout android:orientation="vertical" android:background="@drawable/background_with_pressed_state" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.zoiper.android.util.themeframework.customviews.CustomTextView android:gravity="start" android:id="@id/contact_us_title" android:paddingLeft="@dimen/premium_features_list_item_name_padding_left" android:paddingTop="@dimen/premium_features_list_item_name_padding_top" android:paddingBottom="@dimen/premium_features_list_item_name_padding_bottom" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="0.0dp" android:layout_marginTop="@dimen/premium_features_list_item_name_margin_top" android:layout_marginRight="0.0dp" android:text="@string/contact_us_label" android:layout_alignParentLeft="true" android:paddingStart="@dimen/premium_features_list_item_name_padding_left" android:layout_alignParentStart="true" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/contact_us_button" app:layout_constraintTop_toTopOf="parent" style="@style/PremiumFeaturesListItemNameNormal" />
    <com.zoiper.android.util.themeframework.customviews.CustomButton android:gravity="center" android:id="@id/contact_us_button" android:background="@drawable/custom_button_with_rounded_corners" android:padding="5.0dp" android:layout_width="@dimen/premium_features_list_item_purchase_button_height" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/premium_features_list_item_purchase_button_margin_left" android:layout_marginTop="@dimen/premium_features_list_item_purchase_button_margin_top" android:layout_marginRight="@dimen/premium_features_list_item_purchase_button_margin_right" android:layout_marginBottom="@dimen/premium_features_list_item_purchase_button_margin_bottom" android:minHeight="40.0dp" android:text="@string/send_email_label" android:layout_alignParentRight="true" android:textAllCaps="true" android:textAlignment="inherit" android:layout_alignParentEnd="true" android:stateListAnimator="@null" app:customBackgroundColor="@color/accent" app:layout_constraintBottom_toBottomOf="@id/contact_us_title" app:layout_constraintLeft_toLeftOf="@id/guideline" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="@id/contact_us_title" style="@style/PremiumFeaturesListItemPrice" />
    <com.zoiper.android.util.themeframework.customviews.CustomTextView android:enabled="true" android:id="@id/contact_us_desc" android:paddingLeft="@dimen/premium_features_list_item_description_padding_left" android:paddingRight="@dimen/premium_features_list_item_description_padding_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0.0dp" android:layout_marginTop="@dimen/premium_features_list_item_description_margin_top" android:layout_marginRight="0.0dp" android:layout_marginBottom="@dimen/premium_features_list_item_description_margin_bottom" android:text="@string/premium_features_notice" android:lineSpacingExtra="5.0dp" android:paddingStart="@dimen/premium_features_list_item_description_padding_left" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/contact_us_title" app:layout_constraintVertical_bias="0.0" style="@style/PremiumFeaturesListItemDescription" />
</com.zoiper.android.util.themeframework.customviews.CustomConstraintLayout>
